# obs-source-swapper

./: CMakeLists.txt  CMakePresets.json  README.md  buildspec.json
cmake/common/: bootstrap.cmake  buildnumber.cmake  buildspec_common.cmake  ccache.cmake  compiler_common.cmake  helpers_common.cmake  osconfig.cmake
cmake/linux/: compilerconfig.cmake  defaults.cmake  helpers.cmake
cmake/macos/: buildspec.cmake  compilerconfig.cmake  defaults.cmake  helpers.cmake  xcode.cmake
cmake/macos/resources/: ccache-launcher-c.in  ccache-launcher-cxx.in
cmake/windows/: compilerconfig.cmake  defaults.cmake  helpers.cmake
src/: plugin-main.c
